--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"svelte": "^5.43.8",
 		"vite": "^7.2.2"
+	},
+	"dependencies": {
+		"fuse.js": "^7.1.0"
 	}
 }
